feat: minimal setup of hybrid app which use UIRouter and Restangular
Exception handlers, interceptors to test how everything works together

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="ng1App">
 <head>
   <meta charset="utf-8">
   <title>HybridApp</title>
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <ui-view></ui-view>
+  <ng2-bootstrap></ng2-bootstrap>
 </body>
 </html>
